--- a/Banco de Capacitores/Estilos.css
+++ b/Banco de Capacitores/Estilos.css
@@ -1,9 +1,9 @@
 body{
-    background-color: #eee;
+    background-color: #fff;
 }
 .cajaTitulos{
     height: 75px;
-    background-color: #eee;
+    background-color: #fff;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -15,38 +15,27 @@ body{
 }
 .Tituloh1{
     text-align: center;
-    font-size: 1.3rem;
-    padding: 5px;
-    float: left;
-    padding-right: 10px;
-}
-.Titulos{
-    background-color: #eee;
-    flex-grow: 1;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.3rem;
-    text-align: center;
-    padding-top: 20px;
-    width: 200px;  
-    cursor: pointer;
-    transition: 0.15s;
-}
-.Titulos:hover{
-    color: #ffd700;
     font-size: 1.7rem;
-    
+    padding: 5px;
+    margin-left: 25%;
+    padding-right: 10px;
+    color: #111;
+    padding-top: 7px;
 }
+
+
 .Contactanos{
     flex-grow: 2;
-    background-color: #eee;
+    background-color: #fff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     text-align: center;
-    float: left ;
+    margin-left: 15%;
+    
 }
 .Wasap{
-    margin-left: 50px;
-    margin-top: 20px;
+    margin-left: 60px;
+    margin-top: 30px;
     width: auto;
     height: 40%;
     float: left;
@@ -55,7 +44,7 @@ body{
     
     flex-grow: 1;
     
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     text-align: center;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -75,8 +64,8 @@ body{
     background-position: center;
     width: 100% ;
     height: 400px;
-    background-color: #0004;
-    transition: background-image 0.00000000000000000000000000000001s ;
+    background-color: #0001;
+    transition: background-image 0.00000000000000000000001s ;
     
 }
 .image-transition {
@@ -110,7 +99,6 @@ body{
 .flechaDerecha{
     width: 50px;
     float: right;
-  
     padding-top: 150px;
     transition: 0.2s;
     cursor: pointer;
@@ -131,10 +119,9 @@ body{
     width: 60px;
 }
 .caja-de-informacion{
-    margin-top: 700px;
+    margin-top: 600px;
     width: 100%;
-    height: 150px;
-    background-color: #0004;
+    height: 300px;
     float: left;
     left: 0%;
     right: 0%;
@@ -142,5 +129,79 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1.7rem;
     text-align: center;
-    
+    color: #111;
+}
+#teamworkCaja{
+    margin-left: 35%;
+    width: 100px;
+    height: 100px;
+    text-align: center  ;
+    font-size: 1.7rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#teamwork{
+    width: 70px;
+    height: 70px;
+    float: left;
+    margin-left: 35px;
+}
+#gestionCaja{
+    margin-left: 55%;
+    margin-top: -150px;
+    width: 200px;
+    height: 100px;
+    text-align: center  ;
+    font-size: 1.7rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#gestionTiempo{
+    width: 70px;
+    height: 70px;
+    float: left;
+    margin-left: 70px;
+}
+
+#progress-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 5px;
+    width: 0;
+    background-color: #ffd700;
+    transition: width 5s linear;
+}
+#h2Servicios{
+    font-size: 2.7rem;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#cajaServicios{
+    margin-top: 1000px;
+    background-color: #0001;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: #111;
+}
+#cajaImgServicio1{
+    margin-left: 27%;
+    width: 835px;
+    height: 325px;
+    background-image: url(Imagenes/imagenInfo1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+}
+#cajaImgServicio2{
+    width:875px;
+    height: 340px;
+    background-image: url(Imagenes/imagenInfo2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 26%;
+    margin-top: 4%;
+    border-radius: 10px;
 }
