--- a/Banco de Capacitores/Estilos.css
+++ b/Banco de Capacitores/Estilos.css
@@ -2,56 +2,63 @@ body{
     background-color: #fff;
 }
 .cajaTitulos{
-    height: 75px;
+    height: 15%;
     background-color: #fff;
     position: absolute;
     top: 0%;
     left: 0%;
     right: 0%;
-    padding-left: 50px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     color: #111;
+    font-weight: 300;
+    box-shadow: 0 0 10PX black;
 }
 .Tituloh1{
     text-align: center;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     padding: 5px;
-    margin-left: 25%;
+    margin-left: 1%;
     padding-right: 10px;
     color: #111;
     padding-top: 7px;
+    font-weight: 300;
 }
-
-
-.Contactanos{
-    flex-grow: 2;
-    background-color: #fff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.7rem;
+.dimensionBanco{
+    width: 10%;
+    height: 70%;
+    flex-grow: 1;
+    font-size: 1.6rem;
     text-align: center;
-    margin-left: 15%;
+    margin-top: 15px;
+    float: left;
+    background-color: #666;
+    color: #eee;
+    border-radius: 20px;
+    transition: 0.1s;
+    cursor: pointer;
     
 }
-.Wasap{
-    margin-left: 60px;
-    margin-top: 30px;
-    width: auto;
-    height: 40%;
-    float: left;
+.dimensionBanco:hover{
+    background-color: #fff;
+    color: #111;
+    border-color: #666;
+    border-style: solid;
+    border-width: 2px;
 }
-.TitulosContactanos{
+.titulos{
     
     flex-grow: 1;
-    
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     text-align: center;
     margin-bottom: 10px;
-    margin-left: 10px;
-    transition: 0.89s;
+    transition: 0.1s;
     float: left;
-    
-
+    cursor: pointer;
+}
+.titulos:hover{
+    font-size: 1.7rem;
+    color: #ffd700;
 }
 .cambioImg{
     background-image: url(Imagenes/Imagen1.webp);
@@ -122,22 +129,23 @@ body{
     margin-top: 600px;
     width: 100%;
     height: 300px;
-    float: left;
+    
     left: 0%;
     right: 0%;
     position: absolute;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.7rem;
     text-align: center;
     color: #111;
+    font-weight: 300;
 }
 #teamworkCaja{
-    margin-left: 35%;
+    margin-left: 32%;
     width: 100px;
     height: 100px;
     text-align: center  ;
     font-size: 1.7rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #teamwork{
     width: 70px;
@@ -152,7 +160,7 @@ body{
     height: 100px;
     text-align: center  ;
     font-size: 1.7rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #gestionTiempo{
@@ -174,18 +182,19 @@ body{
 #h2Servicios{
     font-size: 2.7rem;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 #cajaServicios{
     margin-top: 1000px;
     background-color: #0001;
     width: 100%;
-    height: 100%;
+    height: 1000px;
     position: absolute;
     color: #111;
 }
 #cajaImgServicio1{
-    margin-left: 27%;
+    margin-left: 20%;
     width: 835px;
     height: 325px;
     background-image: url(Imagenes/imagenInfo1.png);
@@ -201,7 +210,71 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 26%;
-    margin-top: 4%;
+    margin-left: 19%;
+    margin-top: 2%;
     border-radius: 10px;
 }
+.formulariocaja{
+    width: 55%;
+    height: 490PX;
+    margin-top: 120px;
+    border: 2px solid #666;
+    border-radius: 10px;
+}
+.formulario{
+    width: 89%;
+    height: 25px;
+    margin-top: 5%;
+    margin-left: 5%;
+    border-width: 1px;
+    
+}
+#formulario1{
+    width: 89%;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 5%;
+    border-width: 1px;
+}
+#formulariobtn{
+    width: 200px;
+    height: 35px;
+    margin-top: 5%;
+    margin-left: 5%;
+    cursor: pointer;
+    transition: 0.1s;
+    border-width: 1px;
+    background-color: #fff;
+}
+#formulariobtn:hover{
+    color: #eee;
+    background-color: #666;
+}
+#calculadora{
+    margin-top: -0px;
+    background-color: #666;
+    color: #fff;
+    width: 99%;
+    height: 40px;
+    text-align: center;
+    padding-top: 1px;
+    padding-bottom: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-left: 9px solid #aaa;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 10px;
+    font-size: 1.2rem;
+}
+#formText{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 5%;
+    color: #111;
+    font-size: 1rem;
+}
+.valoresText{
+    margin-left: 5%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #111;
+    font-size: 1rem;
+}
+
