--- a/Banco de Capacitores/Estilos.css
+++ b/Banco de Capacitores/Estilos.css
@@ -1,8 +1,9 @@
+
 body{
     background-color: #fff;
 }
 .cajaTitulos{
-    height: 15%;
+    height: 17%;
     background-color: #fff;
     position: absolute;
     top: 0%;
@@ -12,7 +13,9 @@ body{
     display: flex;
     color: #111;
     font-weight: 300;
-    box-shadow: 0 0 10PX black;
+    border-bottom: 4px solid #999;
+    border-top: 4px solid #999;
+
 }
 .Tituloh1{
     text-align: center;
@@ -26,7 +29,7 @@ body{
 }
 .dimensionBanco{
     width: 10%;
-    height: 70%;
+    height: 70px;
     flex-grow: 1;
     font-size: 1.6rem;
     text-align: center;
@@ -57,8 +60,22 @@ body{
     cursor: pointer;
 }
 .titulos:hover{
-    font-size: 1.7rem;
-    color: #ffd700;
+    font-size: 1.65rem;
+    border-bottom: 6px solid #666;
+}
+.iniciobtn{
+    
+    flex-grow: 1;
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 10px;
+    transition: 0.1s;
+    float: left;
+    cursor: pointer;
+}
+.iniciobtn:hover{
+    font-size: 1.65rem;
+    border-bottom: 6px solid #666;
 }
 .cambioImg{
     background-image: url(Imagenes/Imagen1.webp);
@@ -137,10 +154,13 @@ body{
     font-size: 1.7rem;
     text-align: center;
     color: #111;
-    font-weight: 300;
+    
+}
+#h2Informacion{
+    font-weight: 500;
 }
 #teamworkCaja{
-    margin-left: 32%;
+    margin-left: 30%;
     width: 100px;
     height: 100px;
     text-align: center  ;
@@ -151,7 +171,7 @@ body{
     width: 70px;
     height: 70px;
     float: left;
-    margin-left: 35px;
+    margin-left: 45%;
 }
 #gestionCaja{
     margin-left: 55%;
@@ -167,7 +187,7 @@ body{
     width: 70px;
     height: 70px;
     float: left;
-    margin-left: 70px;
+    margin-left: 35%;
 }
 
 #progress-bar {
@@ -179,58 +199,32 @@ body{
     background-color: #ffd700;
     transition: width 5s linear;
 }
-#h2Servicios{
-    font-size: 2.7rem;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-}
-#cajaServicios{
-    margin-top: 1000px;
-    background-color: #0001;
-    width: 100%;
-    height: 1000px;
-    position: absolute;
-    color: #111;
-}
-#cajaImgServicio1{
-    margin-left: 20%;
-    width: 835px;
-    height: 325px;
-    background-image: url(Imagenes/imagenInfo1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 10px;
-}
-#cajaImgServicio2{
-    width:875px;
-    height: 340px;
-    background-image: url(Imagenes/imagenInfo2.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-left: 19%;
-    margin-top: 2%;
-    border-radius: 10px;
-}
 .formulariocaja{
-    width: 55%;
+    width: 60%;
     height: 490PX;
     margin-top: 120px;
     border: 2px solid #666;
     border-radius: 10px;
+    margin-left: 3%;
 }
 .formulario{
-    width: 89%;
+    width: 90%;
     height: 25px;
     margin-top: 5%;
     margin-left: 5%;
     border-width: 1px;
     
 }
-#formulario1{
-    width: 89%;
+#formularioKD{
+    width: 90%;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 5%;
+    border-width: 1px;
+}
+#formulario2KD{
+    width: 90%;
     height: 25px;
     margin-top: 30px;
     margin-left: 5%;
@@ -245,11 +239,28 @@ body{
     transition: 0.1s;
     border-width: 1px;
     background-color: #fff;
+    float: left;
 }
 #formulariobtn:hover{
     color: #eee;
     background-color: #666;
 }
+#formulariobtn2{
+    width: 200px;
+    height: 35px;
+    margin-top: 5%;
+    margin-left: 5%;
+    cursor: pointer;
+    transition: 0.1s;
+    border-width: 1px;
+    background-color: #fff;
+    float: left;
+}
+#formulariobtn2:hover{
+    color: #eee;
+    background-color: #666;
+}
+
 #calculadora{
     margin-top: -0px;
     background-color: #666;
@@ -268,13 +279,65 @@ body{
 #formText{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: 5%;
-    color: #111;
+    color: #666;
     font-size: 1rem;
+    
+}
+#formText2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 5%;
+    color: #666;
+    font-size: 1rem;
+    margin-top: 4%;
 }
 .valoresText{
     margin-left: 5%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #111;
+    color: #666;
     font-size: 1rem;
-}
 
+}
+#result{
+    margin-left: 36%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 5%;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 60%;
+    height: 30px;
+    padding-top: 5px;
+    text-align: center;
+}
+.result-valid{
+    background-color: #c0ffa2;
+    color: #147500;
+}
+.result-invalid{
+    background-color: #ffa2a2;
+    color: #5a0000;
+}
+#resultCFE{
+    margin-left: 36%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 5%;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 60%;
+    height: auto;
+    padding-bottom: 7px;
+    padding-top: 5px;
+    text-align: center;
+}
+.resultCFE-valid{
+    background-color: #c0ffa2;
+    color: #147500;
+}
+.resultCFE-invalid{
+    background-color: #ffa2a2;
+    color: #5a0000;
+}
+#recibocfe{
+    float: right;
+    margin-top: -42%;
+    margin-right: 3%;
+}
