--- a/Banco de Capacitores/Estilos.css
+++ b/Banco de Capacitores/Estilos.css
@@ -13,8 +13,7 @@ body{
     display: flex;
     color: #111;
     font-weight: 300;
-    border-bottom: 4px solid #999;
-    border-top: 4px solid #999;
+    box-shadow: 0 0 10px #999;
 
 }
 .Tituloh1{
@@ -25,7 +24,7 @@ body{
     padding-right: 10px;
     color: #111;
     padding-top: 7px;
-    font-weight: 300;
+    font-weight: 400;
 }
 .dimensionBanco{
     width: 10%;
@@ -61,7 +60,7 @@ body{
 }
 .titulos:hover{
     font-size: 1.65rem;
-    border-bottom: 6px solid #666;
+    border-bottom: 6px solid #999;
 }
 .iniciobtn{
     
@@ -75,7 +74,7 @@ body{
 }
 .iniciobtn:hover{
     font-size: 1.65rem;
-    border-bottom: 6px solid #666;
+    border-bottom: 6px solid #999;
 }
 .cambioImg{
     background-image: url(Imagenes/Imagen1.webp);
@@ -89,7 +88,7 @@ body{
     width: 100% ;
     height: 400px;
     background-color: #0001;
-    transition: background-image 0.00000000000000000000001s ;
+    transition: background-image 0.00000000000000000000001ms ;
     
 }
 .image-transition {
@@ -202,7 +201,7 @@ body{
 
 .formulariocaja{
     width: 60%;
-    height: 490PX;
+    height: auto ;
     margin-top: 120px;
     border: 2px solid #666;
     border-radius: 10px;
@@ -214,14 +213,16 @@ body{
     margin-top: 5%;
     margin-left: 5%;
     border-width: 1px;
-    
+    border-radius: 5px;
 }
+
 #formularioKD{
     width: 90%;
     height: 25px;
     margin-top: 30px;
     margin-left: 5%;
     border-width: 1px;
+    border-radius: 5px;
 }
 #formulario2KD{
     width: 90%;
@@ -240,6 +241,7 @@ body{
     border-width: 1px;
     background-color: #fff;
     float: left;
+    border-radius: 5px;
 }
 #formulariobtn:hover{
     color: #eee;
@@ -255,6 +257,7 @@ body{
     border-width: 1px;
     background-color: #fff;
     float: left;
+    
 }
 #formulariobtn2:hover{
     color: #eee;
@@ -307,6 +310,7 @@ body{
     height: 30px;
     padding-top: 5px;
     text-align: center;
+    border-radius: 5px;
 }
 .result-valid{
     background-color: #c0ffa2;
@@ -340,4 +344,28 @@ body{
     float: right;
     margin-top: -42%;
     margin-right: 3%;
+}
+#monthly-inputs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#monthly-inputs > div {
+    background-color: #ecf0f1;
+    padding: 10px;
+    border-radius: 4px;
+    margin: 5px;
+    flex: 1 1 calc(50% - 20px);
+    box-sizing: border-box;
+}
+
+#monthly-inputs h3 {
+    text-align: center;
+    color: #2c3e50;
+}
+
+#monthly-inputs input[type="number"] {
+    width: calc(100% - 10px);
+    margin: 5px auto;
 }
