--- a/Banco de Capacitores/Estilos.css
+++ b/Banco de Capacitores/Estilos.css
@@ -201,7 +201,7 @@ body{
 
 .formulariocaja{
     width: 60%;
-    height: auto ;
+    height: auto;
     margin-top: 120px;
     border: 2px solid #666;
     border-radius: 10px;
@@ -352,7 +352,7 @@ body{
 }
 
 #monthly-inputs > div {
-    background-color: #ecf0f1;
+    
     padding: 10px;
     border-radius: 4px;
     margin: 5px;
@@ -362,10 +362,14 @@ body{
 
 #monthly-inputs h3 {
     text-align: center;
-    color: #2c3e50;
+    color: #111;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
 }
 
 #monthly-inputs input[type="number"] {
     width: calc(100% - 10px);
     margin: 5px auto;
+    border-radius: 5px;
+    border-width: 1px;
 }
